src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__literal_hex_number_with_double_underscores.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordSemicolon but found '__beef'
  ┌─ <internal>:1:20
  │
1 │ PROGRAM exp 16#DEAD__beef; END_PROGRAM
  │                    ^^^^^^ Unexpected token: expected KeywordSemicolon but found '__beef'
